<resources>
    <string name="app_name">Football</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="competition">Competition</string>
    <string name="fixtures">Fixtures</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="retry">Retry</string>
    <string name="no_fixture">No fixture</string>
</resources>
