<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.TodayFixturesFragment">

        <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/today_fixture_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/rc_today_fixtures"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <com.github.ybq.android.spinkit.SpinKitView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/dimen_12"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/grey" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>